--- a/www/index.html
+++ b/www/index.html
@@ -153,6 +153,8 @@
 
   </div>
 
+  <script src="cordova.js"></script>
+  
   <!-- CORDOVA_PLACEHOLDER_DONT_REMOVE -->
   <!-- Framework7 library -->
   <script src="framework7/framework7-bundle.min.js"></script>
