--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -11,7 +11,7 @@
 			<div class="title">Trouver mon opticien</div>
 			<div class="right">
 				<a href="#" class="link" ng-click="init()">
-					<div class="f7-icons">arrow_2_circlepath</div>
+					<div class="f7-icons">arrow_counterclockwise</div>
 				</a>
 			</div>
 		</div>
