--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div class="above_list_optk">
+        <div class="above_list_optk on_list">
 
             <div class="list media-list inset">
                 <div class="preloader" ng-show="optics.length<=0"></div>
@@ -50,8 +50,7 @@
                     </li>
                 </ul>
             </div>
-
-
+            
         </div>
 
         <!--
