--- a/www/index.html
+++ b/www/index.html
@@ -175,7 +175,9 @@
   <script src="js/controllers/HomeController.js"></script>
   <script src="js/controllers/OpticienController.js"></script>
   <script src="js/controllers/OpticiensController.js"></script>
-
+  <script src="js/controllers/ProfileController.js"></script>
+  <script src="js/controllers/EssayagesController.js"></script>
+  <script src="js/controllers/FavorisController.js"></script>
   
 </body>
 </html>
