--- a/www/pages/opticien.html
+++ b/www/pages/opticien.html
@@ -90,6 +90,10 @@
 						</table>
 					</div>
 
+					<div ng-show="id_matiere!=-1" style="color: #AAA; margin-top:15px; font-size: 12px;">
+						{{matieres[id_matiere].marques}}
+					</div>
+
 					
 					<div class="optic_tit_cat" style="margin-top:30px">Verres</div>
 					<div class="nSubText" style="color:#CCC">Essilor ...</div>
