--- a/www/pages/profil.html
+++ b/www/pages/profil.html
@@ -61,16 +61,16 @@
                                     </div>
                                 </div>
                             </div>
-                        </li><!--
-                        <li class="item-content item-input item-input-focused">
-                            <div class="item-inner">
-                                <div class="item-title item-floating-label">Champ</div>
-                                <div class="item-input-wrap">
-                                    <input type="text" placeholder="Votre adresse email" ng-model="email" />
-                                    <span class="input-clear-button"></span>
+                        </li>
+                        <li>
+                            <div class="item-content item-input">
+                                <div class="item-inner">
+                                    <div class="item-input-wrap">
+                                        <input type="text" placeholder="Your birth date" readonly="readonly" id="calendar-input" />
+                                    </div>
                                 </div>
                             </div>
-                        </li>-->
+                        </li>
                     </ul>
 
                     <div class="block block-strong row no-after no-before" style="margin: 15px 0 0 0 !important; padding-top: 0 !important; padding-bottom: 0 !important;">
