--- a/www/pages/favoris.html
+++ b/www/pages/favoris.html
@@ -18,10 +18,7 @@
 	</div>
 	<div class="page-content">
         
-        <div class="list media-list inset" style="margin:0 10px 0 0;"><!--
-            <div style="text-align: center;">
-                <div class="preloader" ng-show="optics.length<=0"></div>
-            </div>-->
+        <div class="list media-list inset" style="margin:0 10px 0 0;">
             <ul ng-show="optics.length>0">
                 <li ng-repeat="optic in optics">
                     <div class="f7-icons fleche_bas">arrow_right_circle_fill</div>
@@ -42,20 +39,7 @@
                             </div>
                         </div>
                     </a>
-                </li><!--
-                <li ng-repeat="optic in optics">
-                    <div class="f7-icons fleche_bas">arrow_right_circle_fill</div>
-                    <div class="optic_distance">2 km</div>
-                    <a href="/opticien/{{optic.Opticien.id}}/" class="item-link item-content">
-                        <div class="item-media"><img ng-src="{{optic.Opticien.image}}" width="44" /></div>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title">{{optic.Opticien.name}}</div>
-                            </div>
-                            <div class="item-subtitle">{{optic.Opticien.adresse}}</div>
-                        </div>
-                    </a>
-                </li>-->
+                </li>
             </ul>
         </div>
         
