--- a/www/pages/legal.html
+++ b/www/pages/legal.html
@@ -16,17 +16,27 @@
 			</div>
 		</div>
 	</div>
-	<div class="page-content">
+	<div class="page-content" style="background-color: #F2F2F2;">
         <div style="padding-left: 15px; padding-right: 15px; background-color: #F2F2F2; padding-bottom: 80px;">
             &nbsp;
             <div class="op_text_circle">
-                <div class="title">Mes essayages</div>
+                <div class="title">A propos</div>
                 <div class="content">
-                    Des professionnels de santé diplômés qui prennent le temps de découvrir vos besoins
+					Concept original et innovant de Giresse Nshombo Mulenda,
+					opticien mobile à Lyon (69009), développé avec la collaboration
+					des opticiens et des utilisateurs.<br><br>
+					Propriété d’Optic Solutions, SAS, au capital de 3500 euros, dont
+					le siège social se situe xxxxxxxxxxxx immatriculée au Registre du
+					Commerce et des Sociétés de Lyon sous le numéro xxxxxxxxxxxx.<br><br>
+					<u>Numéro de TVA Intracommunautaire</u> : xxxxxxxxxxxx<br>
+					<u>Dirigeant de la société</u> : Mr Nshombo Mulenda Giresse<br>
+					contact@opticsolutions.fr<br><br>
+					<b>Hébergeur</b> : supabase
                 </div>
             </div>
         </div>
 
+		<!--
         <div class="above_list_optk">
 
             <form class="list" id="my-form" style="margin-top: 0px; margin-bottom: 15px; text-transform: none;">
@@ -35,7 +45,7 @@
                 </div>
             </form>
 
-        </div>
+        </div>-->
         
 	</div>
 </div>
