--- a/www/pages/profil.html
+++ b/www/pages/profil.html
@@ -65,8 +65,9 @@
                         <li>
                             <div class="item-content item-input">
                                 <div class="item-inner">
+                                    <div class="item-title item-label">Date de naissance</div>
                                     <div class="item-input-wrap">
-                                        <input type="text" placeholder="Your birth date" readonly="readonly" id="calendar-input" />
+                                        <input type="text" placeholder="Date de naissance" readonly="readonly" id="calendar-input" />
                                     </div>
                                 </div>
                             </div>
